# JuFireX

./: .djlintrc  .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  LICENSE  README.md  app.py  deploy_helper.sh  docker-compose.yml  file_protocol_converter.py  format_templates.py  future.md  links  main.py  package-lock.json  package.json  password.txt  pyproject.toml  requirements.txt  setup-linux.sh  setup.ps1  start.bat  start.ps1  start.sh  temp.html
.vercel/: project.json
Day11 GreenWall/: main.js
app.old/: app.py  studio.db  studio_old.db
backend/: Logger.py  __init__.py  admin.py  app.py  auth.py  config.py  extensions.py  models.py  navigation.py  projects.py  services.py  sockets.py  utils.py
backend/api/: __init__.py  auth.py  blog.py  nav.py  navigation.py  project.py  user.py  version.py
backend/core/: Logger.py  Security.py  Version.py  security.py
backend/data/: __init__.py  database.py  seed.py  seed_large.py
backend/legacy/: __init__.py  auth.py  config.py  errors.py  utils.py  (+1 more)
defaults/: navigation.json
docs/: api.md  development_guide.md
document/: DEPLOY_1PANEL.md  README.md  development_guide.md
frontend/: app.vue  index.html  itest.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
instance/: studio.db
refactoring/: _REFACTORING_PLAN.md
scripts/: deploy.sh  inspect_db.py  update.sh
temp/: account.html  profile.css
templates/: base.html  index.html  login.html  navigation.html  profile.html  project_doc_view.html  project_docs_list.html  projects.html  register.html
user_data/: .gitkeep
(+492 files in other folders)
